[package]
name = "differ"
version = "0.1.0"
authors = ["Marc Siegel <marc@usainnov.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jmespath = "~0.2.0"
rkv = "~0.10.2"
memmap = "~0.7.0"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0.41"
serde_yaml = "~0.8.11"
tempfile = "~3.1.0"
