[package]
name = "experiment-differ"
version = "0.1.0"
authors = ["Marc Siegel <marc@usainnov.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jmespath = "~0.2.0"
rkv = "~0.10.2"
memmap = "~0.7.0"
once_cell = "~1.2.0"
once-cell-regex = "~0.1.0"
serde = { version = "~1.0", features = ["derive"] }
serde_json = "~1.0.41"
serde_yaml = "~0.8.11"
structopt = "~0.3.5"
tempfile = "~3.1.0"
validator = "~0.10"
validator_derive = "~0.10"

[replace]
"jmespath:0.2.0" = { git = "https://github.com/jmespath/jmespath.rs" }

[[test]]
name = "cucumber"
harness = false # Allows Cucumber to print output instead of libtest

[dev-dependencies]
cucumber = { package = "cucumber_rust", version = "~0.6.0" }
regex = "~1.3.1"
which = "~3.1.0"
